--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:dev": "npm run test -- --watch",
+    "build": "webpack",
+    "build:dev": "webpack -w --mode=development",
+    "start:dev": "npm run build:dev & nodemon server/index.js --ignore client --ignore public",
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
+    "express": "^4.17.2",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "pg": "^8.7.1",
     "postgres": "^1.0.2",
-    "sequelize": "^6.13.0"
+    "sequelize": "^6.13.0",
+    "uuid": "^8.3.2"
   }
 }
